assets/css/style.css
/* Load google fonts */ 

@import url('https://fonts.googleapis.com/css2?family=Rokkitt&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Mina&display=swap');

/* Global styles */ 

body {
    background-color: #FFECEC;
    font-family: 'Mina', sans-serif;
    font-size: 18px;
}

header {
    border-bottom: 4px solid rgb(255, 189, 200);
}

h1 {
    font-family: 'Rokkitt', sans-serif;
    font-size: 45px;
    letter-spacing: 10px;
    margin-top: 15px;
}

h2 {
    font-family: 'Rokkitt', sans-serif;
    font-size: 25px;
    letter-spacing: 3px;
}

h3 {
    font-size: 20px;
}

a {
    color: #000;
    text-decoration: none;
}

li a:hover {
    color: rgb(187, 0, 109);
}

ul {
    list-style: none;
}

li {
    display: inline-block;
    vertical-align: middle;
}

.footer a {
    font-size: 35px;
    color: #348857;
    padding-left: 10px;
    padding-right: 10px;
}

footer {
    border-top: 4px solid rgb(255, 189, 200);
}

/* Nav bar styling */ 

li a {
    font-size: 20px;
    margin: 20px;
}

.active {
    border-bottom: 3px solid #348857;
    color: #348857;
}

nav {
    margin-top: 40px;
    margin-bottom: 40px;
}

/* Buttons */ 

button {
    background-color: #6FCF97;
    font-size: 20px;
    border-style: none;
    border-radius: 4px;
}

.button {
    background-color: #6FCF97;
    font-size: 20px;
    border-style: none;
    border-radius: 4px;
}

#return-home { 
    border: #6FCF97!important; /* !important needed to override Bootstrap styling */ 
    background-color: rgb(160, 9, 9);
    padding: 2px;
    color: #fff;
    border-radius: 4px;
    margin-left: 20%;
    margin-top: 0;
    float: left;
}

#return-home-contact {
    border: #6FCF97!important; /* !important needed to override Bootstrap styling */ 
    background-color: rgb(160, 9, 9);
    padding: 2px;
    color: #fff;
    border-radius: 4px;
    margin: 0 auto;
    text-align: center;
}

/* Grow effect. Credit: Hover.css library */

.hvr-grow {
    display: inline-block;
    vertical-align: middle;
    -webkit-transform: perspective(1px) translateZ(0);
    transform: perspective(1px) translateZ(0);
    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
    -webkit-transition-duration: 0.3s;
    transition-duration: 0.3s;
    -webkit-transition-property: transform;
    transition-property: transform;
  }

.hvr-grow:hover, .hvr-grow:focus, .hvr-grow:active {
    -webkit-transform: scale(1.1);
    transform: scale(1.1);
}

/* Game board creation */ 

/* This .no-display style is used to toggle HTML elements off and on upon whether game board is generated or not */

#board {
    margin: 0 auto;
    margin-bottom: 10px;
    clear: both;
}

.no-display {
    visibility: hidden;
}

/* Card styling */ 

.fruitModCard {
    padding: 10px;
}

.fruitHardCard {
    padding-top: 10px;
}

/* Media queries to ensure the content is correctly layed out on mobile and tablet view */ 

@media screen and (min-width: 900px) {
    .fruitCard {
        padding: 40px;
   }

   #board {
       width: 50%;
   }
}

@media screen and (min-width: 300px) {
    .fruitCard {
        margin-bottom: 10px;
    }

    #board {
        margin-top: 10px;
    }
}

@media screen and (max-width: 900px) {
    #return-home {
        margin-left: 50px;
    }

    footer ul li a {
        margin: 0;
        padding: 0;
        font-size: 10px;
    }

    footer ul {
        margin: 0;
        padding: 0;
    }
}

@media screen and (min-width: 300px) {
    .fruitCard {
        margin-bottom: 10px;
    }

    #board {
        width: 80%;
    }
}

#timer {
    font-size: 20px;
    margin-left: 70%;
}

.form-elem {
    display: block;
    width: 60%;
    margin: 0 auto;
}

#play-rules {
    clear: both;
}

#counter, #score-text {
    font-size: 25px;
}

footer ul {
    margin-top: 40px;
}

